// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should call onChange callback 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[MockFunction]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <UncheckedIcon
              className="css-pljilv uncheckedIcon"
            />
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Text
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
              string="foo"
            >
              foo
            </Text>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should have on value at a time 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <UncheckedIcon
              className="css-pljilv uncheckedIcon"
            />
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Text
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
              string="foo"
            >
              foo
            </Text>
          </label>
        </RadioItem>
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_bar/.1"
          label="bar"
          name="bar"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 bar radioItem"
            htmlFor="bar"
          >
            <UncheckedIcon
              className="css-pljilv uncheckedIcon"
            />
            <input
              aria-labelledby="bar-label"
              checked={false}
              className="sr-only input"
              id="bar"
              name="bar"
              onChange={[Function]}
              type="radio"
            />
            <Text
              aria-hidden={true}
              className="css-1hju4sd label"
              id="bar-label"
              string="bar"
            >
              bar
            </Text>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render column group with items 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <UncheckedIcon
              className="css-pljilv uncheckedIcon"
            />
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Text
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
              string="foo"
            >
              foo
            </Text>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render empty group 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      />
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render rows group with items 1`] = `
<RadioGroup
  className=""
  direction="rows"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1gehsfr radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <UncheckedIcon
              className="css-pljilv uncheckedIcon"
            />
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Text
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
              string="foo"
            >
              foo
            </Text>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should use default value 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value="foo"
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasLeftElement={false}
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={true}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <CheckedIcon
              className="css-nihp8 css-pljilv checkedIcon"
            />
            <input
              aria-labelledby="foo-label"
              checked={true}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Text
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
              string="foo"
            >
              foo
            </Text>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;
